--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
     <title>From Input Wave</title>
   </head>
   <body>
+    <div class="container">
+      <h1>Please Login</h1>
+      <form>
+        <div class="form-control">
+          <input type="text" id="email" required />
+          <label for="email">Email</label>
+        </div>
+        <div class="form-control">
+          <input type="password" id="password" required />
+          <label for="password">Password</label>
+        </div>
+        <button class="btn" type="button">Login</button>
+        <p class="text">Don't have an account? <a href="#">Register</a></p>
+      </form>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
