--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
           <label for="password">Password</label>
         </div>
         <button class="btn" type="button">Login</button>
-        <p class="text">Don't have an account? <a href="#">Register</a></p>
+        <p class="text">
+          Don't have an account? <a href="signup.html">Register</a>
+        </p>
       </form>
     </div>
     <script src="script.js"></script>
