--- a/signup.html
+++ b/signup.html
@@ -8,6 +8,12 @@
     <title>SignUp Form</title>
   </head>
   <body>
+    <div class="container">
+      <form>
+        <h1>Sign Up Here</h1>
+        <p class="text">Please fill in this form to create an account!</p>
+      </form>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
