--- a/signup.html
+++ b/signup.html
@@ -10,8 +10,29 @@
   <body>
     <div class="container">
       <form>
-        <h1>Sign Up Here</h1>
-        <p class="text">Please fill in this form to create an account!</p>
+        <h1>Please Sign Up Here</h1>
+        <div class="form-control">
+          <input type="text" id="first-name" required />
+          <label for="first-name">First Name</label>
+        </div>
+        <div class="form-control">
+          <input type="text" id="last-name" required />
+          <label for="last-name">Last Name</label>
+        </div>
+        <div class="form-control">
+          <input type="email" id="email" required />
+          <label for="email">Email</label>
+        </div>
+        <div class="form-control">
+          <input type="password" id="password" required />
+          <label for="password">Password</label>
+        </div>
+        <div class="form-control">
+          <input type="password" id="confirm-password" required />
+          <label for="confirm-password">Confirm Password</label>
+        </div>
+        <button class="btn" type="button">Sign Up</button>
+        <p class="text">Already a member?<a href="index.html">Log In</a></p>
       </form>
     </div>
     <script src="script.js"></script>
